--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,33 @@
-server {
-    listen 3000;
+http {
+    server {
+        listen 3000;
 
-    server_name localhost;
+        server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
+        root /usr/share/nginx/html;
+        index index.html;
 
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
 
-    error_page 404 /404.html;
-    location = /404.html {
-        internal;
-    }
+        error_page 404 /404.html;
+        location = /404.html {
+            internal;
+        }
 
-    location ~* \.(?:manifest|appcache|html?|xml|json)$ {
-        expires -1;
-    }
+        location ~* \.(?:manifest|appcache|html?|xml|json)$ {
+            expires -1;
+        }
 
-    location ~* \.(?:css|js|woff2?|webmanifest|ttf|otf|eot|svg|ico)$ {
-        expires 1y;
-        access_log off;
-    }
+        location ~* \.(?:css|js|woff2?|webmanifest|ttf|otf|eot|svg|ico)$ {
+            expires 1y;
+            access_log off;
+        }
 
-    location ~* \.(?:png|jpg|jpeg|gif|bmp|webp)$ {
-        expires 1M;
-        access_log off;
+        location ~* \.(?:png|jpg|jpeg|gif|bmp|webp)$ {
+            expires 1M;
+            access_log off;
+        }
     }
 }
