--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.8'
+name: midseelee
 
 services:
   app:
+    image: midseelee/svelte-app
     container_name: midseelee
     build:
       context: .
