--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,43 @@
+user nginx;
+
+worker_processes    auto;
+
+events { worker_connections 1024; }
+
 http {
     server {
-        listen 3000;
+        server_tokens off;
 
-        server_name localhost;
-
-        root /usr/share/nginx/html;
-        index index.html;
+        listen  3000;
+        root    /usr/share/nginx/html;
+        include /etc/nginx/mime.types;
 
         location / {
             try_files $uri $uri/ /index.html;
         }
 
-        error_page 404 /404.html;
-        location = /404.html {
-            internal;
-        }
-
-        location ~* \.(?:manifest|appcache|html?|xml|json)$ {
-            expires -1;
-        }
-
-        location ~* \.(?:css|js|woff2?|webmanifest|ttf|otf|eot|svg|ico)$ {
-            expires 1y;
-            access_log off;
-        }
-
-        location ~* \.(?:png|jpg|jpeg|gif|bmp|webp)$ {
-            expires 1M;
-            access_log off;
-        }
+        gzip            on;
+        gzip_vary       on;
+        gzip_http_version  1.0;
+        gzip_comp_level 5;
+        gzip_types
+                        application/atom+xml
+                        application/javascript
+                        application/json
+                        application/rss+xml
+                        application/vnd.ms-fontobject
+                        application/x-font-ttf
+                        application/x-web-app-manifest+json
+                        application/xhtml+xml
+                        application/xml
+                        font/opentype
+                        image/svg+xml
+                        image/x-icon
+                        text/css
+                        text/plain
+                        text/x-component;
+        gzip_proxied    no-cache no-store private expired auth;
+        gzip_min_length 256;
+        gunzip          on;
     }
 }
