--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tsconfig/svelte": "^5.0.4",
-    "svelte": "^5.0.5",
+    "svelte": "5.1.11",
     "svelte-check": "^4.0.5",
-    "tslib": "^2.8.0",
+    "tslib": "2.8.1",
     "typescript": "5.6.3",
     "vite": "5.4.10"
   }
