Enhance Nginx configuration for improved security and performance

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,43 +1,97 @@
 user nginx;
 
-worker_processes    auto;
+worker_processes auto;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
+    # Expand bot detection map
+    map $http_user_agent $bad_bot {
+        default 0;
+        ~*(360Spider|80legs|Abonti|Aboundex|Acunetix|^Mozilla$|aiHitBot|AhrefsBot|AIBOT|AiHitBot|Alexibot|Alligator|AllSubmitter|Apexoo|asterias|AttackBot|BackDoorBot|BackWeb|Backlink|BadBot|Bandit|Baiduspider|BBBike|BLEXBot|Blow|Blackwidow|Bot\ mailto:craftbot@yahoo.com|BOT/0.1|BotALot|Buddy|BuiltBotTough|BunnySlippers|CCBot|Cegbfeieh|CheeseBot|CherryPicker|ChinaClaw|Collector|Copier|CopyRightCheck|cosmos|Crescent|CSHttp|Devil|DISCo|DittoSpyder|Download\ Demon|Download\ Devil|Download\ Wonder|Dragonfly|Drip|DataCha0s|DTS\ Agent|EasyDL|ebingbong|eCatch|EirGrabber|EmailCollector|EmailSiphon|EmailWolf|EroCrawler|Exabot|Express\ WebPictures|Extractor|ExtractorPro|EyeNetIE|FlashGet|Findxbot|FHscan|Fimap|Firefox/7\.0|FloodGate|Foobot|FrontPage|GalaxyBot|GetRight|GetWeb!|Go!Zilla|Go-Ahead-Got-It|GrabNet|Grafula|Harvest|HEADMasterSEO|heritrix|Heritrix|HIjack|HMView|HTTP::Lite|HTTrack|Humanlinks|Indy\ Library|InfoNaviRobot|Iron33|ISC\ Systems\ iRc\ Search\ 2\.1|JetCar|JOC\ Web\ Spider|Joomla|Jorgee|KHost|Larbin|LeechFTP|LexiBot|Lftp|LibWeb|Linkextractor|LinkpadBot|LinkScan|LinkWalker|LinqiaMetadataDownloaderBot|LNSpiderguy|Magnet|Mag-Net|Mechanize|MegaIndex|Metauri|Microsoft\ URL\ Control|MIDown\ tool|MIIxpc|Mister\ PiX|MJ12bot|moget|MSFrontPage|NERDByNature|Navroad|NearSite|Net\ Vampire|NetAnts|NetSpider|NetZIP|NPbot|Octopus|Offline\ Explorer|Offline\ Navigator|OpenindexSpider|OutclicksBot|OutfoxBot|Page\ Analyzer|PHP\ version\ tracker|Pockey|ProPowerBot|ProWebWalker|Python|QueryN\ Metasearch|RealDownload|ReGet|Rippers\ 0|SeaMonkey$|SemrushBot|SeznamBot|SISTRIX|Site\ Sucker|SiteSnagger|Siphon|Slurp|SmartDownload|Snake|Snapbot|Snoopy|Socrates|spbot|Spinn3r|SuperBot|SuperHTTP|Surfbot|sqlmap|Synapse|Szukacz|Teen|Teleport|Telesoft|The\ Intraformant|TheNomad|Titan|True_Robot|Turingos|TurnitinBot|Typhoeus|URLy\ Warning|Vacuum|VCI|VidibleScraper|Vigilante|VoidEYE|WebAuto|WebBandit|WebCollage|WebCopier|WebCapture|WebClient|WebCopy|Webfetch|WebGo\ IS|WebLeacher|WebmasterWorldForumBot|WebReaper|WebSauger|WebStripper|WebWhacker|WebZIP|Wotbox|Wget|WWW-Collector-E|Xaldon|Xenu|Zermelo|Zeus) 1;
+    }
+
+    # Rate limiting zones
+    limit_req_zone $binary_remote_addr zone=wp_admin:10m rate=1r/s;
+
     server {
         server_tokens off;
 
-        listen  3000;
-        root    /usr/share/nginx/html;
+        listen 3000;
+        root /usr/share/nginx/html;
         include /etc/nginx/mime.types;
 
         location / {
             try_files $uri $uri/ /index.html;
         }
 
-        gzip            on;
-        gzip_vary       on;
-        gzip_http_version  1.0;
+        # Enhanced WordPress protection
+        location ~* ^/wp-(admin|login|register|setup-config\.php) {
+            # Apply rate limiting
+            limit_req zone=wp_admin burst=3 nodelay;
+
+            # Block bad bots
+            if ($bad_bot = 1) {
+                return 444;
+            }
+
+            # Block common exploit attempts
+            location ~* wp-config\.php$ {
+                return 444;
+            }
+            location ~* wp-admin/includes {
+                return 444;
+            }
+            location ~* wp-includes/.*\.php$ {
+                return 444;
+            }
+
+            # Enhanced security headers
+            add_header X-Robots-Tag "noindex, nofollow" always;
+            add_header X-Frame-Options "DENY" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+            add_header Referrer-Policy "strict-origin-always" always;
+
+            # Only allow GET and POST
+            limit_except GET POST {
+                deny all;
+            }
+
+            # Continue normal processing
+            try_files $uri $uri/ /index.php?$args;
+        }
+
+        # Block XML-RPC
+        location = /xmlrpc.php {
+            deny all;
+            return 444;
+        }
+
+        gzip on;
+        gzip_vary on;
+        gzip_http_version 1.0;
         gzip_comp_level 5;
         gzip_types
-                        application/atom+xml
-                        application/javascript
-                        application/json
-                        application/rss+xml
-                        application/vnd.ms-fontobject
-                        application/x-font-ttf
-                        application/x-web-app-manifest+json
-                        application/xhtml+xml
-                        application/xml
-                        font/opentype
-                        image/svg+xml
-                        image/x-icon
-                        text/css
-                        text/plain
-                        text/x-component;
-        gzip_proxied    no-cache no-store private expired auth;
+        application/atom+xml
+        application/javascript
+        application/json
+        application/rss+xml
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        application/x-web-app-manifest+json
+        application/xhtml+xml
+        application/xml
+        font/opentype
+        image/svg+xml
+        image/x-icon
+        text/css
+        text/plain
+        text/x-component;
+        gzip_proxied no-cache no-store private expired auth;
         gzip_min_length 256;
-        gunzip          on;
+        gunzip on;
     }
 }
