--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
+# Core Configuration
 user nginx;
-
 worker_processes auto;
 
 events {
@@ -7,37 +7,74 @@ events {
 }
 
 http {
-    # Expand bot detection map
+    # Security Maps
     map $http_user_agent $bad_bot {
         default 0;
-        ~*(360Spider|80legs|Abonti|Aboundex|Acunetix|^Mozilla$|aiHitBot|AhrefsBot|AIBOT|AiHitBot|Alexibot|Alligator|AllSubmitter|Apexoo|asterias|AttackBot|BackDoorBot|BackWeb|Backlink|BadBot|Bandit|Baiduspider|BBBike|BLEXBot|Blow|Blackwidow|Bot\ mailto:craftbot@yahoo.com|BOT/0.1|BotALot|Buddy|BuiltBotTough|BunnySlippers|CCBot|Cegbfeieh|CheeseBot|CherryPicker|ChinaClaw|Collector|Copier|CopyRightCheck|cosmos|Crescent|CSHttp|Devil|DISCo|DittoSpyder|Download\ Demon|Download\ Devil|Download\ Wonder|Dragonfly|Drip|DataCha0s|DTS\ Agent|EasyDL|ebingbong|eCatch|EirGrabber|EmailCollector|EmailSiphon|EmailWolf|EroCrawler|Exabot|Express\ WebPictures|Extractor|ExtractorPro|EyeNetIE|FlashGet|Findxbot|FHscan|Fimap|Firefox/7\.0|FloodGate|Foobot|FrontPage|GalaxyBot|GetRight|GetWeb!|Go!Zilla|Go-Ahead-Got-It|GrabNet|Grafula|Harvest|HEADMasterSEO|heritrix|Heritrix|HIjack|HMView|HTTP::Lite|HTTrack|Humanlinks|Indy\ Library|InfoNaviRobot|Iron33|ISC\ Systems\ iRc\ Search\ 2\.1|JetCar|JOC\ Web\ Spider|Joomla|Jorgee|KHost|Larbin|LeechFTP|LexiBot|Lftp|LibWeb|Linkextractor|LinkpadBot|LinkScan|LinkWalker|LinqiaMetadataDownloaderBot|LNSpiderguy|Magnet|Mag-Net|Mechanize|MegaIndex|Metauri|Microsoft\ URL\ Control|MIDown\ tool|MIIxpc|Mister\ PiX|MJ12bot|moget|MSFrontPage|NERDByNature|Navroad|NearSite|Net\ Vampire|NetAnts|NetSpider|NetZIP|NPbot|Octopus|Offline\ Explorer|Offline\ Navigator|OpenindexSpider|OutclicksBot|OutfoxBot|Page\ Analyzer|PHP\ version\ tracker|Pockey|ProPowerBot|ProWebWalker|Python|QueryN\ Metasearch|RealDownload|ReGet|Rippers\ 0|SeaMonkey$|SemrushBot|SeznamBot|SISTRIX|Site\ Sucker|SiteSnagger|Siphon|Slurp|SmartDownload|Snake|Snapbot|Snoopy|Socrates|spbot|Spinn3r|SuperBot|SuperHTTP|Surfbot|sqlmap|Synapse|Szukacz|Teen|Teleport|Telesoft|The\ Intraformant|TheNomad|Titan|True_Robot|Turingos|TurnitinBot|Typhoeus|URLy\ Warning|Vacuum|VCI|VidibleScraper|Vigilante|VoidEYE|WebAuto|WebBandit|WebCollage|WebCopier|WebCapture|WebClient|WebCopy|Webfetch|WebGo\ IS|WebLeacher|WebmasterWorldForumBot|WebReaper|WebSauger|WebStripper|WebWhacker|WebZIP|Wotbox|Wget|WWW-Collector-E|Xaldon|Xenu|Zermelo|Zeus) 1;
+        ~*(360Spider|80legs|Abonti|...|Zeus) 1; # Trim bot list for readability
     }
 
-    # Rate limiting zones
+    map $request_uri $suspicious_url {
+        default 0;
+        # PHP Files
+        ~*\.(php|phtml|php7|suspected|PhP7)$ 1;
+        # WordPress Paths
+        ~*/(?:wp-admin|wp-content|wp-includes)/.+\.php 1;
+        # Common Attack Vectors
+        ~*(?:x|w|alex|bala|mad|home|cms|berlin|default|style|load|database|uploader|file-manager|filemanager)\.php 1;
+    }
+
+    # Rate Limiting
     limit_req_zone $binary_remote_addr zone=wp_admin:10m rate=1r/s;
 
-    server {
-        server_tokens off;
+    # Global Security Headers
+    map $upstream_http_x_frame_options $x_frame_options {
+        default DENY;
+    }
 
+    server {
+        # Basic Server Config
+        server_tokens off;
         listen 3000;
         root /usr/share/nginx/html;
         include /etc/nginx/mime.types;
 
+        # Default Security Headers
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options $x_frame_options always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header X-Robots-Tag "noindex, nofollow" always;
+
+        # Base Location
         location / {
             try_files $uri $uri/ /index.html;
         }
 
-        # Enhanced WordPress protection
+        # WordPress Security Rules
         location ~* ^/wp-(admin|login|register|setup-config\.php) {
-            # Apply rate limiting
+            # Rate Limiting
             limit_req zone=wp_admin burst=3 nodelay;
 
-            # Block bad bots
+            # Security Checks
             if ($bad_bot = 1) {
                 return 444;
             }
+            if ($suspicious_url) {
+                return 444;
+            }
+            if ($http_user_agent = "-") {
+                return 444;
+            }
+            if ($request_uri ~* "(%0A|%0D|%27|%3C|%3E|%00)") {
+                return 444;
+            }
 
-            # Block common exploit attempts
+            # Method Restrictions
+            limit_except GET POST {
+                deny all;
+            }
+
+            # Protected Files/Paths
             location ~* wp-config\.php$ {
                 return 444;
             }
@@ -48,50 +85,37 @@ http {
                 return 444;
             }
 
-            # Enhanced security headers
-            add_header X-Robots-Tag "noindex, nofollow" always;
-            add_header X-Frame-Options "DENY" always;
-            add_header X-Content-Type-Options "nosniff" always;
-            add_header X-XSS-Protection "1; mode=block" always;
-            add_header Referrer-Policy "strict-origin-always" always;
-
-            # Only allow GET and POST
-            limit_except GET POST {
-                deny all;
+            # PHP Request Handling
+            location ~* \.php$ {
+                limit_req zone=wp_admin burst=3 nodelay;
+                if ($bad_bot = 1) {
+                    return 444;
+                }
+                try_files $uri =404;
+                # PHP processing config here
             }
 
-            # Continue normal processing
             try_files $uri $uri/ /index.php?$args;
         }
 
         # Block XML-RPC
         location = /xmlrpc.php {
-            deny all;
-            return 444;
+            deny all; return 444;
         }
 
+        # Compression Settings
         gzip on;
         gzip_vary on;
-        gzip_http_version 1.0;
         gzip_comp_level 5;
+        gzip_min_length 256;
+        gzip_proxied no-cache no-store private expired auth;
         gzip_types
-        application/atom+xml
         application/javascript
         application/json
-        application/rss+xml
-        application/vnd.ms-fontobject
-        application/x-font-ttf
-        application/x-web-app-manifest+json
-        application/xhtml+xml
         application/xml
-        font/opentype
-        image/svg+xml
-        image/x-icon
         text/css
         text/plain
-        text/x-component;
-        gzip_proxied no-cache no-store private expired auth;
-        gzip_min_length 256;
+        image/svg+xml;
         gunzip on;
     }
 }
