--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@sveltejs/vite-plugin-svelte": "4.0.2",
     "@tsconfig/svelte": "^5.0.4",
     "svelte": "5.1.11",
-    "svelte-check": "^4.0.5",
+    "svelte-check": "4.1.0",
     "tslib": "2.8.1",
     "typescript": "5.6.3",
     "vite": "5.4.10"
