--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,11 @@
-node_modules/
-.svelte-kit/
-build/
+Dockerfile
+.dockerignore
+node_modules
+npm-debug.log
+README.md
+.next
+.git
+.gitignore
+*.lockb
+*.log
+.DS_Store
