--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@mdx-js/loader": "latest",
     "@mdx-js/react": "latest",
     "@next/mdx": "latest",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
     "geist": "latest",
+    "lucide-react": "^0.378.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "react-syntax-highlighter": "^16.1.0",
-    "rehype-highlight": "latest"
+    "rehype-highlight": "latest",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
