--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
-version: '3.8'
-
 services:
   app:
     container_name: my-profile-app
+    platform: linux/arm64
     build:
       context: .
       dockerfile: Dockerfile
+      platforms:
+        - linux/arm64
     restart: always
     ports:
       - "3000:3000"
